--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     ></script>
   </head>
   <body>
-    
+
     <div class=" navbar navbar-expand-lg navbar-light" id="menu">
       <a class="navbar-brand " href="#" id="logotipo"
         >LOGOTIPO <br />
@@ -37,7 +37,7 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
+        data-toggle=""
         data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
