--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
         >LOGOTIPO <br />
         IMAGEN</a
       >
+
+      <!-- data-toggle="collapse" -->
+
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle=""
+        data-toggle="collapse"
         data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
